Including a new notebook

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /data/img
 /data/csv/COVID-19_Test_to_Treat.csv
 /data/csv/COVID-19_Public_Therapeutic_Locator.csv
-/notebooks/zipCodes.ipynb
-/notebooks/fips.ipynb
+/notebooks/zipcodes_to_counties.ipynb
+/notebooks/fips_counties.ipynb
