--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
 /data/img
-/data/csv/COVID-19_Test_to_Treat.csv
+
+#/data/csv/2010_zcta_to_county.csv
+/data/csv/COVID-19_Case_Surveillance_Public_Use_Data_with_Geography.csv
 /data/csv/COVID-19_Public_Therapeutic_Locator.csv
-/data/csv/national_aiannh_by_state2020.txt
-/notebooks/zipcodes_to_counties.ipynb
+/data/csv/COVID-19_Test_to_Treat.csv
+#/data/csv/fips_county.csv
+/data/csv/fips_state.csv
+#/data/csv/national_aiannh_by_state2020.txt
+/data/csv/state-geocodes-v20.csv
+/data/csv/state-geocodes-v2019.xlsx
+/data/csv/zipcode_to_county.csv
+
 /notebooks/fips_counties.ipynb
+#/notebooks/fips_states.ipynb
+/notebooks/User_Location.ipynb
+/notebooks/UserCasesMap.ipynb
+/notebooks/zipcodes_to_counties.ipynb
+
+/src/__pycache__
+/src/MyBarChart.py
+/src/MyGeoMap.py
+/src/MyUserLocation.py
+
